# winrt-tts-server

./: Cargo.toml  LICENSE  README.md  renovate.json  rust-toolchain
.github/workflows/: actionlint.yml  ci.yml  review.yml
assets/: index.html
src/: main.rs  model.rs  speech.rs  web.rs
