[package]
name = "winrt-tts-server"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["macros"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
ssml = { version = "0.2.0", features = ["serde"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "net"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
windows = { version = "0.62.2", features = [
    "Media_Core",
    "Media_SpeechSynthesis",
    "Storage_Streams",
] }
windows-result = "0.4.1"
